# Physics

./: .gitignore  CMakeLists.txt  Makefile  test_angle
include/maths/: angle.hpp  complex.hpp  derivative.hpp  fraction.hpp  function.hpp  lcm_gcd.hpp  linear_systems.hpp  number.hpp  numerics.hpp
include/maths/vectors_matrices/: column.hpp  matrix.hpp  row.hpp  unitvector.hpp  vector3.hpp
include/physics/: physics.hpp  physics_constants.hpp  physics_constants_quantities.hpp  physics_quantity.hpp  physics_units.hpp
include/physics/four_vectors_tensors/: fourmomentum.hpp  matrix4.hpp  vector4.hpp
src/: main.cpp
src/maths/: angle.cpp  complex.cpp  derivative.cpp  fraction.cpp  function.cpp  lcm_gcd.cpp  number.cpp  numerics.cpp
src/maths/vectors_matrices/: column.cpp  matrix.cpp  row.cpp  unitvector.cpp  vector3.cpp
src/physics/four_vectors_tensors/: fourmomentum.cpp  matrix4.cpp  vector4.cpp
tests/: test_angle.cpp  test_complex.cpp  test_fraction.cpp  test_lcm_gcd.cpp  test_number.cpp  test_physics_constants_quantities.cpp  test_physics_quantity.cpp  test_physics_units.cpp
